--- a/src/index.css
+++ b/src/index.css
@@ -193,7 +193,7 @@ p {
 	height: 0.25rem;
 	background: #49a6e9;
 	background: var(--clr-primary-5);
-	margin-inline: auto;
+	margin:0 auto;
 }
 .page-100 {
 	min-height: calc(100vh - 10rem);
