--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,7 @@ Global Styles
 	box-sizing: border-box;
 }
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: 'Supreme', sans-serif;
 	background: var(--clr-white);
 	color: var(--clr-grey-1);
 	line-height: 1.5;
@@ -80,6 +79,7 @@ h2,
 h3,
 h4,
 h5 {
+	font-family: 'Nunito', sans-serif;
 	letter-spacing: var(--spacing);
 	text-transform: capitalize;
 	line-height: 1.25;
@@ -129,6 +129,10 @@ p {
 	h4 {
 		line-height: 1;
 	}
+}
+
+button {
+  font-family: inherit;
 }
 /*  global classes */
 
